changed h1 font size

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     }
     
     h1 {
-        font-size: 70px;
+        font-size: 50px;
         font-family: 'Pushster', cursive;
     }
     
@@ -13,7 +13,7 @@
     }
     
     h2 {
-        font-size: 40px;
+        font-size: 3gi0px;
         font-family: 'Times New Roman', Times, serif;
     }
     
