--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,28 @@
         background-repeat: no-repeat;
         background-position: right;
     }
+    
+    .two-box {
+        display: flex;
+        text-align: justify;
+    }
+    
+    .dev-box {
+        border: 1px solid white;
+        margin: 20px;
+        box-shadow: 5px 7px 40px rgb(145, 22, 22);
+        border-radius: 10px;
+    }
+    
+    .third-section-experiences {
+        background-image: url(../images/exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    
+    footer p {
+        text-align: center;
+        font-size: 24px;
+        font-family: 'Architects Daughter', cursive;
+        font-family: 'Pushster', cursive;
+    }
