changed p tag font size

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     
     .box-width p {
         font-family: 'Architects Daughter', cursive;
-        font-size: x-large;
+        font-size: larger;
     }
     
     .header-top-banner {
